--- a/rpm/Ropedices.yaml
+++ b/rpm/Ropedices.yaml
@@ -1,30 +1,30 @@
-Name: Rope dices
+Name: Ropedices
 Summary: Rope dices
 Version: 0.1
 Release: 1
 Group: Qt/Qt
 URL: http://example.org/
-License: 
+License: Public Domain
 Sources:
 - '%{name}-%{version}.tar.bz2'
 Description: |-
-  An RPG dice application for Sailfish OS
+  A dice application for Sailfish OS
 Configure: none
 Builder: qtc5
 PkgConfigBR:
-- sailfishapp >= 0.0.10
-- Qt5Core
-- Qt5Qml
 - Qt5Quick
+- Qt5Qml
+- Qt5Core
+- sailfishapp >= 0.0.10
 Requires:
 - sailfishsilica-qt5 >= 0.10.9
 Files:
-- /usr/share/icons/hicolor/86x86/apps
-- /usr/share/applications
-- /usr/share/Ropedices
-- /usr/bin
-- '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
-- '%{_datadir}/applications/%{name}.desktop'
-- '%{_datadir}/%{name}/qml'
 - '%{_bindir}'
+- '%{_datadir}/%{name}/qml'
+- '%{_datadir}/applications/%{name}.desktop'
+- '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
+- /usr/bin
+- /usr/share/Ropedices
+- /usr/share/applications
+- /usr/share/icons/hicolor/86x86/apps
 PkgBR: []
