--- a/harbour-ropedices.desktop
+++ b/harbour-ropedices.desktop
@@ -2,5 +2,5 @@
 Type=Application
 X-Nemo-Application-Type=silica-qt5
 Name=Rope dices
-Icon=Ropedices
-Exec=Ropedices
+Icon=harbour-ropedices
+Exec=harbour-ropedices
