--- a/rpm/harbour-ropedices.yaml
+++ b/rpm/harbour-ropedices.yaml
@@ -1,4 +1,4 @@
-Name: Ropedices
+Name: harbour-ropedices
 Summary: Rope dices
 Version: 0.1
 Release: 1
@@ -12,19 +12,19 @@ Description: |-
 Configure: none
 Builder: qtc5
 PkgConfigBR:
-- Qt5Quick
-- Qt5Qml
-- Qt5Core
 - sailfishapp >= 0.0.10
+- Qt5Core
+- Qt5Qml
+- Qt5Quick
 Requires:
 - sailfishsilica-qt5 >= 0.10.9
 Files:
-- '%{_bindir}'
-- '%{_datadir}/%{name}/qml'
-- '%{_datadir}/applications/%{name}.desktop'
-- '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
-- /usr/bin
-- /usr/share/Ropedices
-- /usr/share/applications
+- /usr/share/harbour-ropedices
 - /usr/share/icons/hicolor/86x86/apps
+- /usr/share/applications
+- /usr/bin
+- '%{_datadir}/icons/hicolor/86x86/apps/%{name}.png'
+- '%{_datadir}/applications/%{name}.desktop'
+- '%{_datadir}/%{name}/qml'
+- '%{_bindir}'
 PkgBR: []
